--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "hermit-md",
+  "name": "Abro-md",
   "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
   ],
-  "repository": "https://github.com/A-d-i-t-h-y-a-n/hermit-md",
+  "repository": "https://github.com/Temitopeareo/abro",
   "stack": "container",
   "env": {
     "SESSION_ID": {
